k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iphone-17-site
  namespace: default
spec:
  selector:
    app: iphone-17-site
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
